Fixes Location spacing

--- a/Client/src/components/Location/Location.css
+++ b/Client/src/components/Location/Location.css
@@ -2,13 +2,10 @@
   position: relative;
   display:flex;
   justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 5px;
-
 }
 
 .subContainer {
-  width: 320px;
+  width: 100%;
   height: 88px;
   border: 1.5px solid #C2C6CC;
   border-radius: 15px;
@@ -24,22 +21,20 @@
   margin-bottom: 3px;
 }
 
-::placeholder {
-  font-size: 21px;
-  border-radius: 3px;
+.WholeLocationContainer ::placeholder {
+  font-size: 17px;
   border: transparent;
-  color: #C2C6CC;
   text-align: center;
   font: bolder;
 }
 
-div input {
+.WholeLocationContainer input {
   font-size: 21px;
   border-radius: 3px;
   border: transparent;
   color: black;
   text-align: left;
   font: bolder;
-  width: 85%;
+  padding: 1rem;
 }
 
